* add support generic tasks

--- a/Brik.Queue/Brik.Queue.csproj
+++ b/Brik.Queue/Brik.Queue.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseTaskHandler.cs" />
     <Compile Include="Common\IQueueDispatcher.cs" />
     <Compile Include="Common\ITask.cs" />
     <Compile Include="Common\ITaskHandler.cs" />
