--- a/src/Brik.Queue/project.json
+++ b/src/Brik.Queue/project.json
@@ -1,5 +1,5 @@
 ﻿{
-  "version": "1.0.0",
+  "version": "1.0.2",
   "title": "TaskQueue",
   "description": "Task queue",
   "authors": [ "Albert Zakiev" ],
@@ -9,7 +9,6 @@
     "projectUrl": "https://github.com/serber/TaskQueueNet",
     "licenseUrl": "https://github.com/serber/TaskQueueNet/blob/master/LICENSE",
     "owners": [ "Albert Zakiev" ],
-    "iconUrl": "",
     "requireLicenseAcceptance": false,
     "summary": "Implemets simple tasks queue"
   },
@@ -19,10 +18,7 @@
   },
 
   "frameworks": {
-    "net45": {
-      "frameworkAssemblies": {
-      }
-    },
+    "net451": {},
     "netstandard1.3": {
       "imports": "dnxcore50"
     }
